
* ML antiquotations \<^make_judgment> and \<^dest_judgment> refer to
corresponding functions for the object-logic of the ML compilation
context. This supersedes older mk_Trueprop / dest_Trueprop operations.

* ML antiquotations for type constructors and term constants:

    \<^Type>\<open>c\<close>
    \<^Type>\<open>c T \<dots>\<close>       \<comment> \<open>same with type arguments\<close>
    \<^Type>_fn\<open>c T \<dots>\<close>    \<comment> \<open>fn abstraction, failure via exception TYPE\<close>
    \<^Const>\<open>c\<close>
    \<^Const>\<open>c T \<dots>\<close>      \<comment> \<open>same with type arguments\<close>
    \<^Const>\<open>c for t \<dots>\<close>  \<comment> \<open>same with term arguments\<close>
    \<^Const_>\<open>c \<dots>\<close>       \<comment> \<open>same for patterns: case, let, fn\<close>
    \<^Const>_fn\<open>c T \<dots>\<close>   \<comment> \<open>fn abstraction, failure via exception TERM\<close>

Examples in HOL:

  val natT = \<^Type>\<open>nat\<close>;
  fun mk_funT (A, B) = \<^Type>\<open>fun A B\<close>;
  val dest_funT = fn \<^Type>\<open>fun A B\<close> => (A, B);
  fun mk_conj (A, B) = \<^Const>\<open>conj for A B\<close>;
  val dest_conj = fn \<^Const_>\<open>conj for A B\<close> => (A, B);
  fun mk_eq T (t, u) = \<^Const>\<open>HOL.eq T for t u\<close>;
  val dest_eq = fn \<^Const_>\<open>HOL.eq T for t u\<close> => (T, (t, u));

* The "build" combinators of various data structures help to build
content from bottom-up, by applying an "add" function the "empty" value.
For example:

  - type 'a Symtab.table etc.: build
  - type 'a Names.table etc.: build
  - type 'a list: build and build_rev
  - type Buffer.T: build and build_content

For example, see src/Pure/PIDE/xml.ML:

  val content_of = Buffer.build_content o fold add_content;

* ML antiquotations \<^try>\<open>expr\<close> and \<^can>\<open>expr\<close> operate directly on
the given ML expression, in contrast to functions "try" and "can" that